--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="js/sketch.js"></script>
     <script src="https://unpkg.com/p5"></script>
     <script src="https://unpkg.com/p5.fillgradient"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     
     <style>
         *{
